--- a/Agentic_RAG_Tutorial_with_Groclake.ipynb
+++ b/Agentic_RAG_Tutorial_with_Groclake.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMW2Wuo6o0XMwGCAXmargWv",
+      "authorship_tag": "ABX9TyP8ckLMrPGRfXWHA0wPqO9z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,8 +82,8 @@
         "import os\n",
         "\n",
         "# Set API key and account ID\n",
-        "GROCLAKE_API_KEY = 'd09bf41544a3365a46c9077ebb5e35c3'\n",
-        "GROCLAKE_ACCOUNT_ID = 'd63d370767a83b9ff30532ed0528cc9c'\n",
+        "GROCLAKE_API_KEY = 'your_groclake_api_key'\n",
+        "GROCLAKE_ACCOUNT_ID = 'your_groclake_account_id'\n",
         "\n",
         "# Set them as environment variables\n",
         "os.environ['GROCLAKE_API_KEY'] = GROCLAKE_API_KEY\n",
@@ -374,10 +374,10 @@
         "            {\n",
         "                \"role\": \"user\",\n",
         "                \"content\": f\"Using the following context from retrieved documents: {enriched_context}, \"\n",
-        "                           f\"please provide a detailed explanation.\",\n",
-        "                \"token_size\": 300\n",
+        "                           f\"please provide a detailed explanation.\"\n",
         "            }\n",
-        "        ]\n",
+        "        ],\n",
+        "        \"token_size\": 300\n",
         "    }\n",
         "\n",
         "    # Query ModelLake for a response\n",
