--- a/Groclake_Set_Up.ipynb
+++ b/Groclake_Set_Up.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpfXTKox05Rt4VNts3QNGK",
+      "authorship_tag": "ABX9TyMOgbJFuq5AgomkPQs5k6HR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
       },
       "outputs": [],
       "source": [
-        "pip install groclake"
+        "pip install groclake==0.2.1"
       ]
     },
     {
@@ -69,25 +69,25 @@
       "source": [
         "import os\n",
         "import inspect\n",
-        "from groclake.cataloglake import CatalogLake\n",
-        "from groclake.datalake import DataLake\n",
-        "from groclake.vectorlake import VectorLake\n",
-        "from groclake.modellake import ModelLake\n",
+        "from groclake.cataloglake import Cataloglake\n",
+        "from groclake.datalake import Datalake\n",
+        "from groclake.vectorlake import Vectorlake\n",
+        "from groclake.modellake import Modellake\n",
         "\n",
         "# Directly set the environment variables\n",
         "os.environ['GROCLAKE_API_KEY'] = 'your_api_key_here'\n",
         "os.environ['GROCLAKE_ACCOUNT_ID'] = 'your_account_id_here'\n",
         "\n",
         "# Initialize Groclake modules\n",
-        "catalog_lake = CatalogLake()\n",
-        "data_lake = DataLake()\n",
-        "vector_lake = VectorLake()\n",
-        "model_lake = ModelLake()\n"
+        "catalog_lake = Cataloglake()\n",
+        "data_lake = Datalake()\n",
+        "vector_lake = Vectorlake()\n",
+        "model_lake = Modellake()\n"
       ],
       "metadata": {
         "id": "g-tVfX5geaEV"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -128,19 +128,19 @@
         "import os\n",
         "import inspect\n",
         "from dotenv import load_dotenv  # Import the load_dotenv function\n",
-        "from groclake.cataloglake import CatalogLake\n",
-        "from groclake.datalake import DataLake\n",
-        "from groclake.vectorlake import VectorLake\n",
-        "from groclake.modellake import ModelLake\n",
+        "from groclake.cataloglake import Cataloglake\n",
+        "from groclake.datalake import Datalake\n",
+        "from groclake.vectorlake import Vectorlake\n",
+        "from groclake.modellake import Modellake\n",
         "\n",
         "# Load environment variables from .env file\n",
         "load_dotenv()  # This will automatically load the variables from the .env file\n",
         "\n",
         "# Initialize Groclake modules\n",
-        "catalog_lake = CatalogLake()\n",
-        "data_lake = DataLake()\n",
-        "vector_lake = VectorLake()\n",
-        "model_lake = ModelLake()\n"
+        "catalog_lake = Cataloglake()\n",
+        "data_lake = Datalake()\n",
+        "vector_lake = Vectorlake()\n",
+        "model_lake = Modellake()\n"
       ],
       "metadata": {
         "id": "iyqrKnrof-T_"
