--- a/Groclake_Datalake.ipynb
+++ b/Groclake_Datalake.ipynb
@@ -72,10 +72,10 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "from groclake.cataloglake import CatalogLake\n",
-        "from groclake.modellake import ModelLake\n",
-        "from groclake.datalake import DataLake\n",
-        "from groclake.vectorlake import VectorLake\n",
+        "from groclake.cataloglake import Cataloglake\n",
+        "from groclake.modellake import Modellake\n",
+        "from groclake.datalake import Datalake\n",
+        "from groclake.vectorlake import Vectorlake\n",
         "\n",
         "# Environment variable setup\n",
         "GROCLAKE_API_KEY = 'your_groclake_api_key'\n",
@@ -85,9 +85,9 @@
         "os.environ['GROCLAKE_ACCOUNT_ID'] = GROCLAKE_ACCOUNT_ID\n",
         "\n",
         "# Initialize Groclake catalog instance\n",
-        "model_lake = ModelLake()\n",
-        "data_lake = DataLake()\n",
-        "vector_lake = VectorLake()"
+        "model_lake = Modellake()\n",
+        "data_lake = Datalake()\n",
+        "vector_lake = Vectorlake()"
       ],
       "metadata": {
         "id": "lfciMmww5Erh"
@@ -108,7 +108,7 @@
       "cell_type": "code",
       "source": [
         "# Create instances for DataLake\n",
-        "data_lake = DataLake()"
+        "data_lake = Datalake()"
       ],
       "metadata": {
         "id": "H3YLO0Gf5axr"
