--- a/RAG_Tutorial_with_Groclake.ipynb
+++ b/RAG_Tutorial_with_Groclake.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMk67mCf0mx0bjGFBUR+xK",
+      "authorship_tag": "ABX9TyM7Ebol+glb1M3U8kIWJp38",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,19 +110,19 @@
     {
       "cell_type": "code",
       "source": [
-        "from groclake.vectorlake import VectorLake\n",
-        "from groclake.datalake import DataLake\n",
-        "from groclake.modellake import ModelLake\n",
+        "from groclake.vectorlake import Vectorlake\n",
+        "from groclake.datalake import Datalake\n",
+        "from groclake.modellake import Modellake\n",
         "\n",
         "try:\n",
         "    # Initialize VectorLake\n",
-        "    vectorlake = VectorLake()\n",
+        "    vectorlake = Vectorlake()\n",
         "    vector_create = vectorlake.create()\n",
         "    vectorlake_id = vector_create[\"vectorlake_id\"]\n",
         "    print(f\"VectorLake created with ID: {vectorlake_id}\")\n",
         "\n",
         "    # Initialize DataLake\n",
-        "    datalake = DataLake()\n",
+        "    datalake = Datalake()\n",
         "    datalake_create = datalake.create()\n",
         "    datalake_id = datalake_create[\"datalake_id\"]\n",
         "    print(f\"DataLake created with ID: {datalake_id}\")\n",
@@ -158,7 +158,7 @@
         "    }\n",
         "\n",
         "    # Push the document\n",
-        "    data_push = datalake.push(payload_push)\n",
+        "    data_push = datalake.document_push(payload_push)\n",
         "    document_id = data_push.get(\"document_id\")\n",
         "\n",
         "    if not document_id:\n",
@@ -198,7 +198,7 @@
         "    }\n",
         "\n",
         "    # Fetch the document\n",
-        "    data_fetch = datalake.fetch(payload_fetch)\n",
+        "    data_fetch = datalake.document_fetch(payload_fetch)\n",
         "    document_chunks = data_fetch.get(\"document_data\", [])\n",
         "\n",
         "    if not document_chunks:\n",
@@ -382,7 +382,7 @@
         "\n",
         "    # Query ModelLake for a response\n",
         "    try:\n",
-        "        chat_response = ModelLake().chat_complete(payload)\n",
+        "        chat_response = Modellake().chat_complete(payload)\n",
         "        # Extract the assistant's answer\n",
         "        answer = chat_response.get(\"answer\", \"No answer received from ModelLake.\")\n",
         "        print(\"Chat Answer:\", answer)\n",
