--- a/GrocLake_ModeLake.ipynb
+++ b/GrocLake_ModeLake.ipynb
@@ -91,10 +91,10 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "from groclake.cataloglake import CatalogLake\n",
-        "from groclake.modellake import ModelLake\n",
-        "from groclake.datalake import DataLake\n",
-        "from groclake.vectorlake import VectorLake\n",
+        "from groclake.cataloglake import Cataloglake\n",
+        "from groclake.modellake import Modellake\n",
+        "from groclake.datalake import Datalake\n",
+        "from groclake.vectorlake import Vectorlake\n",
         "\n",
         "# Environment variable setup\n",
         "GROCLAKE_API_KEY = 'your_groclake_api_key'\n",
@@ -104,14 +104,14 @@
         "os.environ['GROCLAKE_ACCOUNT_ID'] = GROCLAKE_ACCOUNT_ID\n",
         "\n",
         "# Initialize Groclake catalog instance\n",
-        "model_lake = ModelLake()\n",
-        "data_lake = DataLake()\n",
-        "vector_lake = VectorLake()"
+        "model_lake = Modellake()\n",
+        "data_lake = Datalake()\n",
+        "vector_lake = Vectorlake()"
       ],
       "metadata": {
         "id": "W-VBrvitpeXq"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -253,7 +253,7 @@
       "metadata": {
         "id": "7FWCnB8IuVTy"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
         "for i, payload in enumerate(payloads):\n",
         "    try:\n",
         "        # Perform the chat completion\n",
-        "        chat_response = ModelLake().chat_complete(payload)\n",
+        "        chat_response = model_lake.chat_complete(payload)\n",
         "\n",
         "        # Extract and print the response\n",
         "        chat_answer = chat_response[\"answer\"]\n",
