--- a/Groclake_Datalake.ipynb
+++ b/Groclake_Datalake.ipynb
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "lfciMmww5Erh"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "H3YLO0Gf5axr"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
         "    # https://drive.google.com/uc?export=download&id=1cOYyJ5RuTjLph6Hjx_tAhGN_xH74tBtr\n",
         "\n",
         "    # Push the document to the DataLake\n",
-        "    data_push = data_lake.push(payload_push)\n",
+        "    data_push = data_lake.document_push(payload_push)\n",
         "    print(\"Response from push:\", data_push)\n",
         "\n",
         "    # Extract the document_id from the response, which will be used for retrieval\n",
@@ -258,7 +258,7 @@
         "\n",
         "try:\n",
         "    # Fetch the document from the DataLake\n",
-        "    data_fetch = data_lake.fetch(payload_fetch)\n",
+        "    data_fetch = data_lake.document_fetch(payload_fetch)\n",
         "    print(\"Document Fetched Successfully:\\n\", data_fetch)\n",
         "\n",
         "    # When fetching in chunks, the document is divided into manageable pieces for processing\n",
