--- a/Groclake_Vectorlake.ipynb
+++ b/Groclake_Vectorlake.ipynb
@@ -68,10 +68,10 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "from groclake.cataloglake import CatalogLake\n",
-        "from groclake.modellake import ModelLake\n",
-        "from groclake.datalake import DataLake\n",
-        "from groclake.vectorlake import VectorLake\n",
+        "from groclake.cataloglake import Cataloglake\n",
+        "from groclake.modellake import Modellake\n",
+        "from groclake.datalake import Datalake\n",
+        "from groclake.vectorlake import Vectorlake\n",
         "\n",
         "# Environment variable setup\n",
         "GROCLAKE_API_KEY = 'your_api_key_here'\n",
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "FXdJaEMFjqDC"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
       "source": [
         "# Step 3: Initialize VectorLake Client\n",
         "# Initialize the VectorLake client to interact with its API.\n",
-        "vector = VectorLake()\n",
+        "vector = Vectorlake()\n",
         "\n",
         "# Step 4: Create a New Vector\n",
         "try:\n",
